@@ -1,3 +1,6 @@
+AP-2008-02-06-0: Bugfix:    Correct the field name in dbwriter.xml for mysql 
+                            to ju_exit_status
+
 PJ-2008-01-31-0: Bugfix:    Sort on table column throws exception 
                             if explicit SORT specified in 
                             SimpleQuery Sort on table column
